--- a/sani/_colors.scss
+++ b/sani/_colors.scss
@@ -2,6 +2,11 @@
     .text-#{$key} {
         color: $val;
     }
+    .text-hover-#{key}{
+        &:hover{
+            color: $val;
+        }
+    }
     .bg-#{$key} {
         background-color: $val;
     }
@@ -11,6 +16,9 @@
 
     @for $i from 1 through 9 {
         .text-#{$key}-light-#{$i} {
+            color: mix(white, $val, $i * 10);
+        }
+        .text-hover-#{key}-light-#{$i} {
             color: mix(white, $val, $i * 10);
         }
         .bg-#{$key}-light-#{$i} {
@@ -24,6 +32,11 @@
     @for $i from 1 to 9 {
         .text-#{$key}-dark-#{$i} {
             color: mix(black, $val, $i * 10);
+        }
+        .text-hover-#{$key}-dark-#{$i} {
+            &:hover{
+                color: mix(black, $val, $i * 10);
+            }
         }
         .bg-#{$key}-dark-#{$i} {
             background-color: mix(black, $val, $i * 10);
