--- a/sani/index.scss
+++ b/sani/index.scss
@@ -9,6 +9,7 @@
 
 //components (button, card, navbar)
 @import "component/card";
+@import "component/button";
 
 //utilities ( margin,padding,opacity )
 
