--- a/sani/_colors.scss
+++ b/sani/_colors.scss
@@ -2,7 +2,7 @@
     .text-#{$key} {
         color: $val;
     }
-    .text-hover-#{key}{
+    .text-hover-#{$key}{
         &:hover{
             color: $val;
         }
