radius spelling mistake currection

--- a/sani/_utilities.scss
+++ b/sani/_utilities.scss
@@ -129,14 +129,14 @@ $utilities: (
           "100": 1,
         ),
       ),
-      "border-radious": (
+      "border-radius": (
         "prefix": "br",
         "values": (
-          "default": $base-border-radious,
+          "default": $base-border-radius,
           "none": 0,
-          "xs": math.div($base-border-radious, 4),
-          "sm": math.div($base-border-radious, 2),
-          "lg": $base-border-radious * 2,
+          "xs": math.div($base-border-radius, 4),
+          "sm": math.div($base-border-radius, 2),
+          "lg": $base-border-radius * 2,
           "full": 50%,
         )
       ),
