--- a/sani/component/_button.scss
+++ b/sani/component/_button.scss
@@ -5,7 +5,7 @@
         display: inline-block;
         border: 0;
         padding: $base-padding $base-padding * 2;
-        border-radius: $base-border-radious;
+        border-radius: $base-border-radius;
         background-color: $bg-color;
 }
 
