--- a/sani/component/_card.scss
+++ b/sani/component/_card.scss
@@ -5,7 +5,7 @@
     padding: $base-padding;
     border: $base-border-thickness solid #ddd;
     box-shadow: $base-box-shadow;
-    border-radius: math.div($base-border-radious, 4);
+    border-radius: math.div($base-border-radius, 4);
 
     .card-title {
         font-size: $base-font-size;
