--- a/css/index.css
+++ b/css/index.css
@@ -3255,27 +3255,27 @@ a {
 }
 
 .br {
-  border-radious: 20px;
+  border-radius: 20px;
 }
 
 .br-none {
-  border-radious: 0;
+  border-radius: 0;
 }
 
 .br-xs {
-  border-radious: 5px;
+  border-radius: 5px;
 }
 
 .br-sm {
-  border-radious: 10px;
+  border-radius: 10px;
 }
 
 .br-lg {
-  border-radious: 40px;
+  border-radius: 40px;
 }
 
 .br-full {
-  border-radious: 50%;
+  border-radius: 50%;
 }
 
 .display-n {
