--- a/sani/_variables.scss
+++ b/sani/_variables.scss
@@ -29,7 +29,7 @@ $base-margin: 0.75rem;
 
 // borders
 $base-border-thickness: 1px;
-$base-border-radious: 20px;
+$base-border-radius: 20px;
 
 //box-shadow
 $base-box-shadow:1px 3px 5px rgba(0,0,0,0.1);
