--- a/css/index.css
+++ b/css/index.css
@@ -36,6 +36,386 @@ a {
   color: #1ac888;
 }
 
+@media (min-width: 0) {
+  .responsive-test {
+    color: red;
+  }
+}
+@media (min-width: 480px) {
+  .responsive-test {
+    color: green;
+  }
+}
+@media (min-width: 720px) {
+  .responsive-test {
+    color: yellow;
+  }
+}
+@media (min-width: 960px) {
+  .responsive-test {
+    color: purple;
+  }
+}
+@media (min-width: 1200px) {
+  .responsive-test {
+    color: blue;
+  }
+}
+
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+  box-sizing: border-box;
+}
+
+.row {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+@media (min-width: 0) {
+  .col-i-xs {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 8.3333333333;
+  }
+
+  .col-i-xs {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 16.6666666667;
+  }
+
+  .col-i-xs {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 25;
+  }
+
+  .col-i-xs {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 33.3333333333;
+  }
+
+  .col-i-xs {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 41.6666666667;
+  }
+
+  .col-i-xs {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 50;
+  }
+
+  .col-i-xs {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 58.3333333333;
+  }
+
+  .col-i-xs {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 66.6666666667;
+  }
+
+  .col-i-xs {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 75;
+  }
+
+  .col-i-xs {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 83.3333333333;
+  }
+
+  .col-i-xs {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 91.6666666667;
+  }
+}
+@media (min-width: 480px) {
+  .col-i-sm {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 8.3333333333;
+  }
+
+  .col-i-sm {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 16.6666666667;
+  }
+
+  .col-i-sm {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 25;
+  }
+
+  .col-i-sm {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 33.3333333333;
+  }
+
+  .col-i-sm {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 41.6666666667;
+  }
+
+  .col-i-sm {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 50;
+  }
+
+  .col-i-sm {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 58.3333333333;
+  }
+
+  .col-i-sm {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 66.6666666667;
+  }
+
+  .col-i-sm {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 75;
+  }
+
+  .col-i-sm {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 83.3333333333;
+  }
+
+  .col-i-sm {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 91.6666666667;
+  }
+}
+@media (min-width: 720px) {
+  .col-i-md {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 8.3333333333;
+  }
+
+  .col-i-md {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 16.6666666667;
+  }
+
+  .col-i-md {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 25;
+  }
+
+  .col-i-md {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 33.3333333333;
+  }
+
+  .col-i-md {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 41.6666666667;
+  }
+
+  .col-i-md {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 50;
+  }
+
+  .col-i-md {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 58.3333333333;
+  }
+
+  .col-i-md {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 66.6666666667;
+  }
+
+  .col-i-md {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 75;
+  }
+
+  .col-i-md {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 83.3333333333;
+  }
+
+  .col-i-md {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 91.6666666667;
+  }
+}
+@media (min-width: 960px) {
+  .col-i-lg {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 8.3333333333;
+  }
+
+  .col-i-lg {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 16.6666666667;
+  }
+
+  .col-i-lg {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 25;
+  }
+
+  .col-i-lg {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 33.3333333333;
+  }
+
+  .col-i-lg {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 41.6666666667;
+  }
+
+  .col-i-lg {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 50;
+  }
+
+  .col-i-lg {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 58.3333333333;
+  }
+
+  .col-i-lg {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 66.6666666667;
+  }
+
+  .col-i-lg {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 75;
+  }
+
+  .col-i-lg {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 83.3333333333;
+  }
+
+  .col-i-lg {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 91.6666666667;
+  }
+}
+@media (min-width: 1200px) {
+  .col-1-xl {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 8.3333333333%;
+  }
+
+  .col-2-xl {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 16.6666666667%;
+  }
+
+  .col-3-xl {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 25%;
+  }
+
+  .col-4-xl {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 33.3333333333%;
+  }
+
+  .col-5-xl {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 41.6666666667%;
+  }
+
+  .col-6-xl {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 50%;
+  }
+
+  .col-7-xl {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 58.3333333333%;
+  }
+
+  .col-8-xl {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 66.6666666667%;
+  }
+
+  .col-9-xl {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 75%;
+  }
+
+  .col-10-xl {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 83.3333333333%;
+  }
+
+  .col-11-xl {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 91.6666666667%;
+  }
+
+  .col-12-xl {
+    box-sizing: border-box;
+    flex-grow: 0;
+    width: 100%;
+  }
+}
 .text-primary {
   color: #326dee;
 }
