--- a/css/index.css
+++ b/css/index.css
@@ -76,268 +76,268 @@ a {
 }
 
 @media (min-width: 0) {
-  .col-i-xs {
+  .col-1-xs {
     box-sizing: border-box;
     flex-grow: 0;
     width: 8.3333333333;
   }
 
-  .col-i-xs {
+  .col-2-xs {
     box-sizing: border-box;
     flex-grow: 0;
     width: 16.6666666667;
   }
 
-  .col-i-xs {
+  .col-3-xs {
     box-sizing: border-box;
     flex-grow: 0;
     width: 25;
   }
 
-  .col-i-xs {
+  .col-4-xs {
     box-sizing: border-box;
     flex-grow: 0;
     width: 33.3333333333;
   }
 
-  .col-i-xs {
+  .col-5-xs {
     box-sizing: border-box;
     flex-grow: 0;
     width: 41.6666666667;
   }
 
-  .col-i-xs {
+  .col-6-xs {
     box-sizing: border-box;
     flex-grow: 0;
     width: 50;
   }
 
-  .col-i-xs {
+  .col-7-xs {
     box-sizing: border-box;
     flex-grow: 0;
     width: 58.3333333333;
   }
 
-  .col-i-xs {
+  .col-8-xs {
     box-sizing: border-box;
     flex-grow: 0;
     width: 66.6666666667;
   }
 
-  .col-i-xs {
+  .col-9-xs {
     box-sizing: border-box;
     flex-grow: 0;
     width: 75;
   }
 
-  .col-i-xs {
+  .col-10-xs {
     box-sizing: border-box;
     flex-grow: 0;
     width: 83.3333333333;
   }
 
-  .col-i-xs {
+  .col-11-xs {
     box-sizing: border-box;
     flex-grow: 0;
     width: 91.6666666667;
   }
 }
 @media (min-width: 480px) {
-  .col-i-sm {
+  .col-1-sm {
     box-sizing: border-box;
     flex-grow: 0;
     width: 8.3333333333;
   }
 
-  .col-i-sm {
+  .col-2-sm {
     box-sizing: border-box;
     flex-grow: 0;
     width: 16.6666666667;
   }
 
-  .col-i-sm {
+  .col-3-sm {
     box-sizing: border-box;
     flex-grow: 0;
     width: 25;
   }
 
-  .col-i-sm {
+  .col-4-sm {
     box-sizing: border-box;
     flex-grow: 0;
     width: 33.3333333333;
   }
 
-  .col-i-sm {
+  .col-5-sm {
     box-sizing: border-box;
     flex-grow: 0;
     width: 41.6666666667;
   }
 
-  .col-i-sm {
+  .col-6-sm {
     box-sizing: border-box;
     flex-grow: 0;
     width: 50;
   }
 
-  .col-i-sm {
+  .col-7-sm {
     box-sizing: border-box;
     flex-grow: 0;
     width: 58.3333333333;
   }
 
-  .col-i-sm {
+  .col-8-sm {
     box-sizing: border-box;
     flex-grow: 0;
     width: 66.6666666667;
   }
 
-  .col-i-sm {
+  .col-9-sm {
     box-sizing: border-box;
     flex-grow: 0;
     width: 75;
   }
 
-  .col-i-sm {
+  .col-10-sm {
     box-sizing: border-box;
     flex-grow: 0;
     width: 83.3333333333;
   }
 
-  .col-i-sm {
+  .col-11-sm {
     box-sizing: border-box;
     flex-grow: 0;
     width: 91.6666666667;
   }
 }
 @media (min-width: 720px) {
-  .col-i-md {
+  .col-1-md {
     box-sizing: border-box;
     flex-grow: 0;
     width: 8.3333333333;
   }
 
-  .col-i-md {
+  .col-2-md {
     box-sizing: border-box;
     flex-grow: 0;
     width: 16.6666666667;
   }
 
-  .col-i-md {
+  .col-3-md {
     box-sizing: border-box;
     flex-grow: 0;
     width: 25;
   }
 
-  .col-i-md {
+  .col-4-md {
     box-sizing: border-box;
     flex-grow: 0;
     width: 33.3333333333;
   }
 
-  .col-i-md {
+  .col-5-md {
     box-sizing: border-box;
     flex-grow: 0;
     width: 41.6666666667;
   }
 
-  .col-i-md {
+  .col-6-md {
     box-sizing: border-box;
     flex-grow: 0;
     width: 50;
   }
 
-  .col-i-md {
+  .col-7-md {
     box-sizing: border-box;
     flex-grow: 0;
     width: 58.3333333333;
   }
 
-  .col-i-md {
+  .col-8-md {
     box-sizing: border-box;
     flex-grow: 0;
     width: 66.6666666667;
   }
 
-  .col-i-md {
+  .col-9-md {
     box-sizing: border-box;
     flex-grow: 0;
     width: 75;
   }
 
-  .col-i-md {
+  .col-10-md {
     box-sizing: border-box;
     flex-grow: 0;
     width: 83.3333333333;
   }
 
-  .col-i-md {
+  .col-11-md {
     box-sizing: border-box;
     flex-grow: 0;
     width: 91.6666666667;
   }
 }
 @media (min-width: 960px) {
-  .col-i-lg {
+  .col-1-lg {
     box-sizing: border-box;
     flex-grow: 0;
     width: 8.3333333333;
   }
 
-  .col-i-lg {
+  .col-2-lg {
     box-sizing: border-box;
     flex-grow: 0;
     width: 16.6666666667;
   }
 
-  .col-i-lg {
+  .col-3-lg {
     box-sizing: border-box;
     flex-grow: 0;
     width: 25;
   }
 
-  .col-i-lg {
+  .col-4-lg {
     box-sizing: border-box;
     flex-grow: 0;
     width: 33.3333333333;
   }
 
-  .col-i-lg {
+  .col-5-lg {
     box-sizing: border-box;
     flex-grow: 0;
     width: 41.6666666667;
   }
 
-  .col-i-lg {
+  .col-6-lg {
     box-sizing: border-box;
     flex-grow: 0;
     width: 50;
   }
 
-  .col-i-lg {
+  .col-7-lg {
     box-sizing: border-box;
     flex-grow: 0;
     width: 58.3333333333;
   }
 
-  .col-i-lg {
+  .col-8-lg {
     box-sizing: border-box;
     flex-grow: 0;
     width: 66.6666666667;
   }
 
-  .col-i-lg {
+  .col-9-lg {
     box-sizing: border-box;
     flex-grow: 0;
     width: 75;
   }
 
-  .col-i-lg {
+  .col-10-lg {
     box-sizing: border-box;
     flex-grow: 0;
     width: 83.3333333333;
   }
 
-  .col-i-lg {
+  .col-11-lg {
     box-sizing: border-box;
     flex-grow: 0;
     width: 91.6666666667;
