--- a/sani/_grid.scss
+++ b/sani/_grid.scss
@@ -20,7 +20,7 @@ $grid-columns:12;
 //col classses
 @include xs{
     @for $i from 1 to $grid-columns {
-        .col-#{i}-xs {
+        .col-#{$i}-xs {
             box-sizing: border-box;
             flex-grow: 0;
             width: math.div($i * 100, $grid-columns);
@@ -29,7 +29,7 @@ $grid-columns:12;
 }
 @include sm{
     @for $i from 1 to $grid-columns {
-        .col-#{i}-sm {
+        .col-#{$i}-sm {
             box-sizing: border-box;
             flex-grow: 0;
             width: math.div($i * 100, $grid-columns);
@@ -38,7 +38,7 @@ $grid-columns:12;
 }
 @include md{
     @for $i from 1 to $grid-columns {
-        .col-#{i}-md {
+        .col-#{$i}-md {
             box-sizing: border-box;
             flex-grow: 0;
             width: math.div($i * 100, $grid-columns);
@@ -47,7 +47,7 @@ $grid-columns:12;
 }
 @include lg{
     @for $i from 1 to $grid-columns {
-        .col-#{i}-lg {
+        .col-#{$i}-lg {
             box-sizing: border-box;
             flex-grow: 0;
             width: math.div($i * 100, $grid-columns);
@@ -56,7 +56,7 @@ $grid-columns:12;
 }
 // @include xl{
 //     @for $i from 1 to $grid-columns {
-//         .col-#{i}-xl {
+//         .col-#{$i}-xl {
 //             box-sizing: border-box;
 //             flex-grow: 0;
 //             width: math.div($i * 100, $grid-columns);
