--- a/sani/index.scss
+++ b/sani/index.scss
@@ -14,6 +14,7 @@
 //components (button, card, navbar)
 @import "component/card";
 @import "component/button";
+@import "component/navbar";
 
 //utilities ( margin,padding,opacity )
 @import"utilities";
