--- a/sani/_grid.scss
+++ b/sani/_grid.scss
@@ -50,7 +50,7 @@ $layout-values: flex-start, flex-end, center, space-between, space-around;
         .col-#{$i}-xs {
             box-sizing: border-box;
             flex-grow: 0;
-            width: math.div($i * 100, $grid-columns);
+            width: math.div($i * 100%, $grid-columns);
         }
     }
 }
@@ -59,7 +59,7 @@ $layout-values: flex-start, flex-end, center, space-between, space-around;
         .col-#{$i}-sm {
             box-sizing: border-box;
             flex-grow: 0;
-            width: math.div($i * 100, $grid-columns);
+            width: math.div($i * 100%, $grid-columns);
         }
     }
 }
@@ -68,7 +68,7 @@ $layout-values: flex-start, flex-end, center, space-between, space-around;
         .col-#{$i}-md {
             box-sizing: border-box;
             flex-grow: 0;
-            width: math.div($i * 100, $grid-columns);
+            width: math.div($i * 100%, $grid-columns);
         }
     }
 }
@@ -77,7 +77,7 @@ $layout-values: flex-start, flex-end, center, space-between, space-around;
         .col-#{$i}-lg {
             box-sizing: border-box;
             flex-grow: 0;
-            width: math.div($i * 100, $grid-columns);
+            width: math.div($i * 100%, $grid-columns);
         }
     }
 }
